# Psi

./: .gitignore  LICENSE  README.md  example.hs  psi.cabal
.stack-work/: stack.sqlite3
src/: .Types.hs.swp  Main.hs  NameBinder.hs  Parser.hs  Types.hs
