name:                psi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hman523/psi
license:             MIT
license-file:        LICENSE
author:              Stephen Hunter Barbella
copyright:           2020 Stephen Hunter Barbella
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable psi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, containers
  other-modules:       Parser, Types, NameBinder
